batch install feature added, fix spacing in connection tools

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -127,7 +127,7 @@ a:hover {
 
 .ip-input {
     height: 2rem;
-    min-width: 40vw;
+    min-width: 30vw;
     border-radius: 8px;
     border-color: transparent;
     appearance: none;
